compiler/tests/invalid_programs/break_outside_loop.jm
#!SyntaxError

module foo
  break
end
